2008-06-06  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-dbus-service.[ch]: rename
	panel_dbus_service_init_service to panel_dbus_service_define_service
	* panel-power-manager.c: (panel_power_manager_constructor): updated for
	this change

2008-06-06  Vincent Untz  <vuntz@gnome.org>

	* panel-power-manager.[ch]: rename panel_get_power_manager() to
	panel_power_manager_get()
	* panel-logout.c: (panel_logout_init): updated for this change

2008-06-06  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-cleanup.[ch]: add description
	* libpanel-util/panel-keyfile.[ch]: ditto
	* libpanel-util/Makefile.am: add new file
	* libpanel-util/panel-dbus-service.[ch]: new utility object to make it
	easier to use dbus services. Maybe this is insane, but I have the
	feeling I'm going to duplicate lots of code without this.
	* panel-power-manager.[ch]: basically port to PanelDBusService and:
	(panel_get_power_manager): use panel_cleanup_register()

2008-06-05  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/Makefile.am: add new file
	* libpanel-util/panel-cleanup.[ch]: small utility API to ease cleanup
	when the panel exits
	* main.c: (main): use new API
	* panel-gconf.c: (panel_gconf_get_client): ditto

2008-06-05  Vincent Untz  <vuntz@gnome.org>

	Let's start cleaning up the source. Okay, this attempt will certainly
	fail at some point ;-)
	First step, create an internal libpanel-util library where we put some
	utility functions.
	We start with the GKeyFile extensions.

	* Makefile.am: updated for this change
	* libpanel-util/Makefile.am: new
	* libpanel-util/panel-keyfile.[ch]: new, based on panel-util.c code
	* panel-ditem-editor.c: s/panel_util_key_file/panel_key_file/g
	* panel-menu-items.c: s/panel_util_key_file/panel_key_file/g
	* panel-run-dialog.c: s/panel_util_key_file/panel_key_file/g
	* panel-util.[ch]: s/panel_util_key_file/panel_key_file/g and remove
	panel_util_key_file*
	* launcher.c: s/panel_util_key_file/panel_key_file/g