@@ -1,5 +1,12 @@
 2008-06-06  Vincent Untz  <vuntz@gnome.org>
 
+	* Makefile.am:
+	* libpanel-util/Makefile.am:
+	* panel-power-manager.[ch]: move PanelPowerManager to libpanel-util
+	* panel-logout.c: update the include for the change
+
+2008-06-06  Vincent Untz  <vuntz@gnome.org>
+
 	* libpanel-util/panel-dbus-service.[ch]: rename
 	panel_dbus_service_init_service to panel_dbus_service_define_service
 	* panel-power-manager.c: (panel_power_manager_constructor): updated for
